--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 psycopg2==2.6
 django==1.8.1
-swampdragon
+swampdragon==0.4.2.2
 swampdragon-auth
 swampdragon-notifications
 djangorestframework==3.1.1
